--- a/css/style3.css
+++ b/css/style3.css
@@ -15,7 +15,7 @@ body {
     padding: 80px;
     text-align: center;
     background: #1abc9c;
-    color: white;
+    color: black;
 }
 
 /* Increase the font size of the heading */
@@ -102,7 +102,6 @@ body {
 /* Fake image, just for this example */
 
 .fakeimg {
-    background-color: #aaa;
     width: 100%;
     padding: 20px;
 }
