--- a/style.css
+++ b/style.css
@@ -66,10 +66,6 @@ body {
     color: white;
 }
 
-.active {
-    background-color: #666;
-}
-
 /* Column container */
 
 .row {
@@ -106,7 +102,7 @@ body {
 /* Fake image, just for this example */
 
 .fakeimg {
-    background-color: #aaa;
+    /*background-color: #aaa;*/
     width: 100%;
     padding: 20px;
 }
